# tree-sitter-tcatdump

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-tcatdump.pc.in
bindings/c/tree_sitter/: tree-sitter-tcatdump.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_tcatdump/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTcatdumpTests/: TreeSitterTcatdumpTests.swift
src/: grammar.json  node-types.json  parser.c  scanner.c
